zellij-utils/src/input/unit/snapshots/zellij_utils__input__layout__layout_test__layout_with_pane_templates.snap
---
source: zellij-utils/src/input/./unit/layout_test.rs
assertion_line: 747
expression: "format!(\"{:#?}\", layout)"
---
Layout {
    tabs: [],
    focused_tab_index: None,
    template: Some(
        (
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [
                    TiledPaneLayout {
                        children_split_direction: Vertical,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: false,
                                        focus: None,
                                        external_children_index: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: false,
                        focus: None,
                        external_children_index: None,
                    },
                    TiledPaneLayout {
                        children_split_direction: Vertical,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: false,
                                        focus: None,
                                        external_children_index: None,
                                    },
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: false,
                                        focus: None,
                                        external_children_index: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: false,
                        focus: None,
                        external_children_index: None,
                    },
                    TiledPaneLayout {
                        children_split_direction: Vertical,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Vertical,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: false,
                                        focus: None,
                                        external_children_index: None,
                                    },
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: false,
                                        focus: None,
                                        external_children_index: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: false,
                        focus: None,
                        external_children_index: None,
                    },
                    TiledPaneLayout {
                        children_split_direction: Vertical,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: false,
                                focus: None,
                                external_children_index: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: false,
                        focus: None,
                        external_children_index: None,
                    },
                ],
                split_size: None,
                run: None,
                borderless: false,
                focus: None,
                external_children_index: None,
            },
            [],
        ),
    ),
}
