zellij-utils/src/input/unit/snapshots/zellij_utils__input__layout__layout_test__no_error_on_multiple_layout_nodes_in_file.snap
---
source: zellij-utils/src/input/./unit/layout_test.rs
assertion_line: 1319
expression: "format!(\"{:?}\", layout_error)"
---
LayoutConfig { layouts: [Layout { tabs: [], focused_tab_index: None, template: Some((TiledPaneLayout { children_split_direction: Horizontal, name: None, children: [], split_size: None, run: None, borderless: false, focus: None, external_children_index: None, children_are_stacked: false, is_expanded_in_stack: false, exclude_from_sync: None, run_instructions_to_ignore: [], hide_floating_panes: false, pane_initial_contents: None }, [])), swap_layouts: [], swap_tiled_layouts: [], swap_floating_layouts: [] }, Layout { tabs: [], focused_tab_index: None, template: Some((TiledPaneLayout { children_split_direction: Horizontal, name: None, children: [], split_size: None, run: None, borderless: false, focus: None, external_children_index: None, children_are_stacked: false, is_expanded_in_stack: false, exclude_from_sync: None, run_instructions_to_ignore: [], hide_floating_panes: false, pane_initial_contents: None }, [])), swap_layouts: [], swap_tiled_layouts: [], swap_floating_layouts: [] }], selected_layout: 0 }
